EXTRA_CHATCHAT = \
    chatchat/chatchat.c \
    chatchat/README

EXTRA_SCRIPTS = \
    autopppd \
    callback \
    chatchat \
    ip-down.local.add \
    ip-up.local.add \
    ipv6-down.sample \
    ipv6-up.sample \
    options-rsh-loc \
    options-rsh-rem \
    options-ssh-loc \
    options-ssh-rem \
    plog \
    poff \
    pon \
    pon.1 \
    ppp-off \
    ppp-on \
    ppp-on-dialer \
    ppp-on-rsh \
    ppp-on-ssh \
    README \
    redialer \
    secure-card

EXTRA_DIST= \
    $(EXTRA_CHATCHAT) \
    $(EXTRA_SCRIPTS)
